[package]
name = "forker"
version = "0.0.0"
edition = "2021"

license = "CAL-1.0"
description = "Tool for building foundry-backed local evm forks from RPC urls"
homepage = "https://github.com/rainlanguage/rain.interpreter"
repository = "https://github.com/rainlanguage/rain.interpreter"

[lib]
name = "forker"
crate-type = ["rlib"]

[dependencies]
eyre = "0.6"
foundry-compilers = "=0.2.2"
foundry-block-explorers = "=0.2.2"
alloy-rpc-types = "=0.1.0"
alloy-primitives = "0.5.4"
alloy-sol-types = { version = "0.5.4", features = ["json"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107", default-features = false }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "deb3116955eea4333f9e4e4516104be4182e9ee2" }
revm = { version = "3", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }

revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }
revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze" }

revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "5fa63d7259351c0c5222095006a912a610e4e1e8" }